--- a/css/index.css
+++ b/css/index.css
@@ -5,9 +5,9 @@
 }
 
 @media screen and (max-width: 37.5em) {
-  body {
+  /* body {
     padding: 0;
-  }
+  } */
   .services {
     grid-template-columns: 1fr;
   }
